// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core layout store state [Core Layout] Change View should change active view state 1`] = `
Object {
  "activeView": "Statistic",
}
`;

exports[`Core layout store state [Core Layout] Change View should change active view state 2`] = `
Object {
  "activeView": "Exchange rate",
}
`;

exports[`Core layout store state undefined action should return default state 1`] = `
Object {
  "activeView": "Exchange rate",
}
`;
